Delete freq from db
